--- a/vignettes/articles/wild.qmd
+++ b/vignettes/articles/wild.qmd
@@ -29,10 +29,10 @@ A BibTeX entry for LaTeX users is:
 }
 ```
 
-<p>
-
-```{=html}
-<script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
-```
+<div class="my-5">
+<span class="__dimensions_badge_embed__" data-doi="10.21105/joss.05751"
+data-legend="always" data-style="small_circle"></span><script async
+src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+</div>
 
 ## Publications
