--- a/vignettes/tidyterra.qmd
+++ b/vignettes/tidyterra.qmd
@@ -244,7 +244,7 @@ The package includes extensive documentation available online at
     different color palettes included on the package (see
     [Palettes](https://dieghernan.github.io/tidyterra/articles/palettes.html)).
 
-## Acknowledgements
+## Acknowledgements {.appendix}
 
 I would like to thank [Robert J. Hijmans](https://github.com/rhijmans) for his
 advice and support in adapting some of the methods, as well as for the
