--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ status](https://www.r-pkg.org/badges/version/tidyterra)](https://CRAN.R-project.
 results](https://badges.cranchecks.info/worst/tidyterra.svg)](https://cran.r-project.org/web/checks/check_results_tidyterra.html)
 [![Downloads](https://cranlogs.r-pkg.org/badges/tidyterra)](https://CRAN.R-project.org/package=tidyterra)
 [![DOI](https://joss.theoj.org/papers/10.21105/joss.05751/status.svg)](https://doi.org/10.21105/joss.05751)
-[![R-CMD-check](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yml)
+[![R-CMD-check](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml)
 [![codecov](https://codecov.io/gh/dieghernan/tidyterra/branch/main/graph/badge.svg?token=blvDmRjcfb)](https://app.codecov.io/gh/dieghernan/tidyterra)
 [![CodeFactor](https://www.codefactor.io/repository/github/dieghernan/tidyterra/badge)](https://www.codefactor.io/repository/github/dieghernan/tidyterra)
 [![r-universe](https://dieghernan.r-universe.dev/badges/tidyterra)](https://dieghernan.r-universe.dev/tidyterra)
@@ -43,13 +43,13 @@ developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.re
 [![Stack Exchange
 questions](https://img.shields.io/stackexchange/stackoverflow/t/tidyterra?logo=stackoverflow&label=stackoverflow%20q%26a)](https://stackoverflow.com/questions/tagged/tidyterra)
 [![Works with
-terra-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-terra-devel.yml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-terra-devel.yml)
+terra-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-terra-devel.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-terra-devel.yaml)
 [![Works with
-sf-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-sf-devel.yml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-sf-devel.yml)
+sf-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-sf-devel.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-sf-devel.yaml)
 [![Works with
-ggplot2-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-ggplot2-devel.yml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-ggplot2-devel.yml)
+ggplot2-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-ggplot2-devel.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-ggplot2-devel.yaml)
 [![Works with dplyr and
-readr-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-dplyr-readr.yml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-dplyr-readr.yml)
+readr-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-dplyr-readr.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-dplyr-readr.yaml)
 
 <!-- badges: end -->
 
